--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
+    "react-select": "^2.4.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
